# ccpy

./: .buildinfo  .codecov.yml  .editorconfig  .gitignore  .lgtm.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  LICENSE  MANIFEST.in  Makefile  README.md  cc_calculations.html  ccpq_calculations.html  computational_options.html  contact_information.html  eccc_calculations.html  env.sh  environment.yml  genindex.html  getting_started.html  index.html  installation.html  meson.build  mkdocs.yml  objects.inv  pyproject.toml  readthedocs.yml  references.html  requirements-dev.txt  requirements.txt  sample_calculations.html  search.html  searchindex.js  setup.cfg  setup.py  walkthrough.html
ccpy/: Makefile  NOTES  __init__.py  _version.py  adaptive_ccpq_main.py  calc_driver_main.py  ccp_loops.f90  ccp_matrix.f90  ccpy.py  ccsd_module.py  eomcc_initialize.py  eomccsdt_module.py  left_ipeom2_module.py  mbgf_loops.f90  meson.build  rdm1_module.py  slater.f90  symmetry_count.py  system.py  write_matrix_elements.py
ccpy/adaptive/: adapt_ccsdt.py  adaptive_eomccp_module.py  ccp.py  ccp3.py  ccp3_perturbation.py  eomccp.py  selection.py
ccpy/adaptive/bak/: ccp3.py  ccp3_perturbation.py  ccp_devectorized.py  ccpq.py  selection.py
ccpy/cc/: __init__.py  accd.py  accsd.py  accsdt_p.py  cc2.py  cc3.py  cc4-old.py  cc4.py  ccd.py  ccs.py  ccsd.py  ccsd_chol.py  ccsd_optimized.py  ccsdt.py  ccsdt1.py  ccsdt_chol.py  ccsdt_low_memory.py  ccsdt_p.py  ccsdt_p_chol.py  ccsdt_p_linear.py  ccsdt_p_linear_omp.py  ccsdt_p_quadratic.py  ccsdt_p_quadratic_direct.py  ccsdt_p_quadratic_direct_opt.py  ccsdt_p_quadratic_omp.py  ccsdt_p_v2.py  ccsdtq-rev.py  ccsdtq.py  eccc2.py  eccc2_slow.py  icrcc23.py  meson.build  prescreening.py
ccpy/cc/ccsdt1_updates/: __init__.py  intermediates.py  meson.build  t3a_100001.py  t3a_100011.py  t3a_100111.py  t3a_110001.py  t3a_110011.py  t3a_110111.py  t3a_111001.py  t3a_111011.py  t3a_111111.py  t3b_001001.py  t3b_001010.py  t3b_001011.py  t3b_001110.py  t3b_001111.py  t3b_100001.py  t3b_100010.py  t3b_100011.py  t3b_100110.py  t3b_100111.py  t3b_101001.py  t3b_101010.py  t3b_101011.py  t3b_101110.py  t3b_101111.py  t3b_110001.py  t3b_110010.py  t3b_110011.py  t3b_110110.py  t3b_110111.py  t3b_111001.py  t3b_111010.py  t3b_111011.py  t3b_111110.py  t3b_111111.py  t3c_010001.py  t3c_010011.py  t3c_010100.py  (+104 more)
ccpy/cc/ccsdtq1_updates/: __init__.py  intermediates.py  meson.build  t4a_11111111.py
ccpy/ccp/: ccptriples_testdeck.py  hbar_matrix.py  hbar_slater.py
ccpy/cholesky/: cholesky.py  cholesky_builders.py  meson.build
ccpy/cli/: ccpy_driver.py  parser_module.py
ccpy/constants/: constants.py  meson.build
ccpy/density/: ccsd_no.py  meson.build  natural_orbitals.py  rdm1.py
ccpy/drivers/: adaptive.py  calc_driver_main.py  cc.py  cc_energy.py  diis.py  driver.py  hf_energy.py  meson.build  solvers.py
ccpy/energy/: cc_energy.py  hf_energy.py  lrcc_energy.py  meson.build
ccpy/eom_guess/: __init__.py  cis.py  cisd.py  cisd_chol.py  cisd_matrix.py  deacis.py  dipcis.py  eacis.py  eacisd.py  ipcis.py  ipcisd.py  meson.build  s2matrix.py  sfcis.py
ccpy/eomcc/: 1p_guess.py  __init__.py  cis.py  cis_guess.py  cis_module.py  deaeom2.py  deaeom3.py  deaeom4.py  deaeom4_intermediates.py  deaeom4_p.py  dipeom3.py  dipeom4.py  dipeom4_intermediates.py  dipeomccsdt.py  dipeomccsdta.py  eaeom2.py  eaeom2_module.py  eaeom3.py  eaeom3_intermediates.py  eaeom3_p.py  eaeomccsdt.py  eomcc2.py  eomcc3.py  eomcc3_intermediates.py  eomccsd.py  eomccsd_chol.py  eomccsd_intermediates.py  eomccsdt.py  eomccsdt1.py  eomccsdt1_intermediates.py  eomccsdt_intermediates.py  eomccsdt_module.py  eomccsdt_old.py  eomccsdt_p.py  initial_guess.py  initialize.py  ipeom2.py  ipeom2_module.py  ipeom3.py  ipeom3_intermediates.py  (+13 more)
ccpy/eomcc/eomccsdt1_updates/: __init__.py  intermediates.py  meson.build  r1a_update.py  r1b_update.py  r2a_update.py  r2b_update.py  r2c_update.py  r3a_100001.py  r3a_100011.py  r3a_100111.py  r3a_110001.py  r3a_110011.py  r3a_110111.py  r3a_111001.py  (+61 more)
ccpy/extcorr/: contractions.py  contractions_t3.py  contractions_t4.py  ecccp3.py  external_correction.py  meson.build
ccpy/extrapolation/: goodson_extrapolation.py  meson.build
ccpy/hbar/: HBar.py  HBar_ccs.py  __init__.py  diagonal.py  eomccsdt_intermediates.py  hbar_cc2.py  hbar_cc3.py  hbar_cc4.py  hbar_ccs.py  hbar_ccsd.py  hbar_ccsd_chol.py  hbar_ccsd_debug.py  hbar_ccsdt.py  hbar_ccsdt1.py  hbar_ccsdt_p.py  hbar_ccsdta.py  meson.build
ccpy/input/: energy_input.py
ccpy/interfaces/: cipsi_tools.py  fcidump_tools.py  gamess_tools.py  meson.build  pyscf_integral_tools.py  pyscf_tools.py
ccpy/left/: __init__.py  left_cc3.py  left_cc_intermediates.py  left_ccsd.py  left_ccsd_chol.py  left_ccsdt.py  left_ccsdt_p.py  left_ccsdt_p_slow.py  left_ccsdt_slow.py  left_eaeom2.py  left_eaeom3.py  left_eaeom3_p.py  left_eaeom_intermediates.py  left_ipeom2.py  left_ipeom3.py  left_ipeom3_p.py  left_ipeom_intermediates.py  meson.build
ccpy/lib/: core.py  meson.build
ccpy/lrcc/: __init__.py  lrccsd.py  lrccsd_intermediates.py  meson.build
ccpy/mbpt/: mbgf.py  mbgf_module.py  mbpt.py  mbpt_module.py  meson.build
ccpy/models/: calculation.py  driver.py  geometry.py  hilbert.py  integrals.py  meson.build  molecule.py  operator.py  operators.py  system.py
ccpy/moments/: ccp3.py  ccp3_bak.py  ccp3_chol.py  ccp4.py  cct3.py  cct3_chol.py  crcc23.py  crcc23_chol.py  crcc24-old.py  crcc24.py  crcc34.py  creacc23.py  creomcc23.py  creomcc23_chol.py  cripcc23.py  dipeom4star.py  dipeomccsdta_star.py  eaccp3.py  eaeomccsdta_star.py  eccc23.py  eomccsdta_star.py  ipccp3.py  ipeomccsdta_star.py  meson.build
ccpy/mrcc/: effective_hamiltonian.py  meson.build  mkmrccsd.py  normal_order.py
ccpy/tests/: f2plus-1.0-ccpvdz.py
ccpy/utilities/: active_space.py  determinants.py  dumping.py  external_correction.py  meson.build  permutations.py  printing.py  pspace.py  qspace.py  selection.py  symmetry.py  symmetry_count.py  tensor_contraction.py  updates.py  utilities.py  write_matrix_elements.py
(+752 files in other folders)
