python_sources = [
  '__init__.py',
  '_version.py',
  'ccpy.py',
]

py3.install_sources(
    python_sources,
    subdir: 'ccpy'
)


subdir('cc')
subdir('cholesky')
subdir('constants')
subdir('density')
subdir('drivers')
subdir('energy')
subdir('eomcc')
subdir('eom_guess')
subdir('extcorr')
subdir('extrapolation')
subdir('hbar')
subdir('interfaces')
subdir('left')
subdir('mbpt')
subdir('models')
subdir('moments')
subdir('mrcc')
subdir('utilities')
