python_sources = [
  'accd.py',
  'eccc2.py',
  '__init__.py',
  'ccsdt1.py',
  'ccsdtq-rev.py',
  'ccd.py',
  'ccsdt.py',
  'ccsd.py',
  'accsdt_p.py',
  'accsd.py',
  'cc2.py',
  'ccsdt_p.py',
  'ccsdtq.py',
  'cc3.py'
]

py3.install_sources(
    python_sources,
    subdir: 'ccpy/cc'
)

subdir('ccsdt1_updates')
subdir('ccsdtq1_updates')
