python_sources = [
  '__init__.py',
  'accd.py',
  'accsd.py',
  'accsdt_p.py',
  'cc2.py',
  'cc3.py',
  'cc4.py',
  'ccd.py',
  'ccsd_chol.py',
  'ccsd.py',
  'ccsdt_p_chol.py',
  'ccsdt_p.py',
  'ccsdt.py',
  'ccsdt1.py',
  'ccsdtq.py',
  'eccc2.py',
]

py3.install_sources(
    python_sources,
    subdir: 'ccpy/cc'
)

subdir('ccsdt1_updates')
subdir('ccsdtq1_updates')
