python_sources = [
  'sfeomcc23_intermediates.py',
  'eaeom3_intermediates.py',
  'deaeom2.py',
  'ipeom2.py',
  'eomccsdt.py',
  'sfeomccsd.py',
  'eomccsdt_p.py',
  'deaeom4_intermediates.py',
  'eomccsdt1.py',
  '__init__.py',
  'eomcc3_intermediates.py',
  'eomcc3.py',
  'eomccsd_intermediates.py',
  'ipeom3.py',
  'eomccsdt_intermediates.py',
  'deaeom3.py',
  'deaeom4.py',
  'ipeom3_intermediates.py',
  'dipeom3.py',
  'sfeomcc23.py',
  'eaeom3_p.py',
  'dipeom4_intermediates.py',
  'eaeom3.py',
  'eaeom2.py',
  'eomccsdt1_intermediates.py',
  'eomccsd.py',
  'eomcc2.py',
  'ipeom3_p.py',
  'dipeom4.py'
]

py3.install_sources(
    python_sources,
    subdir: 'ccpy/eomcc'
)

subdir('eomccsdt1_updates')
