python_sources = [
'__init__.py',
'deaeom2.py',
'deaeom3.py',
'deaeom4.py',
'deaeom4_intermediates.py',
'dipeom3.py',
'dipeom4.py',
'dipeom4_intermediates.py',
'dipeomccsdt.py',
'dipeomccsdta.py',
'eaeom2.py',
'eaeom3.py',
'eaeom3_intermediates.py',
'eaeom3_p.py',
'eaeomccsdt.py',
'eomcc2.py',
'eomcc3.py',
'eomcc3_intermediates.py',
'eomccsd.py',
'eomccsd_chol.py',
'eomccsd_intermediates.py',
'eomccsdt.py',
'eomccsdt1.py',
'eomccsdt1_intermediates.py',
'eomccsdt_intermediates.py',
'eomccsdt_p.py',
'ipeom2.py',
'ipeom3.py',
'ipeom3_intermediates.py',
'ipeom3_p.py',
'ipeomccsdt.py',
'ipeomccsdta.py',
'sfeomcc23.py',
'sfeomcc23_intermediates.py',
'sfeomccsd.py',
]

py3.install_sources(
    python_sources,
    subdir: 'ccpy/eomcc'
)

subdir('eomccsdt1_updates')
