python_sources = [
  'left_eaeom2.py',
  'left_ipeom3.py',
  'left_eaeom_intermediates.py',
  'left_cc_intermediates.py',
  '__init__.py',
  'left_ipeom_intermediates.py',
  'left_ipeom2.py',
  'left_ccsdt_p.py',
  'left_eaeom3_p.py',
  'left_ccsdt_p_slow.py',
  'left_cc3.py',
  'left_eaeom3.py',
  'left_ccsd.py',
  'left_ccsdt.py',
  'left_ipeom3_p.py'
]

py3.install_sources(
    python_sources,
    subdir: 'ccpy/left'
)


