python_sources = [
  'creacc23.py',
  'crcc24.py',
  'eccc23.py',
  '__init__.py',
  'eaccp3.py',
  'creomcc23.py',
  'cripcc23.py',
  'crcc24-old.py',
  'ccp3.py',
  'ipccp3.py',
  'crcc23.py',
  'ccp4.py',
  'cct3.py',
  'ccp3_bak.py'
]

py3.install_sources(
    python_sources,
    subdir: 'ccpy/moments'
)


