python_sources = [
'__init__.py',
'ccp3.py',
'ccp3_chol.py',
'ccp4.py',
'cct3.py',
'cct3_chol.py',
'crcc23.py',
'crcc23_chol.py',
'crcc24.py',
'crcc34.py',
'creacc23.py',
'creomcc23.py',
'creomcc23_chol.py',
'cripcc23.py',
'eaccp3.py',
'eaeomccsdta_star.py',
'eccc23.py',
'eomccsdta_star.py',
'ipccp3.py',
'ipeomccsdta_star.py',
'dipeomccsdta_star.py',
]

py3.install_sources(
    python_sources,
    subdir: 'ccpy/moments'
)


