python_sources = [
  't3d_110011.py',
  't3a_110011.py',
  't3d_100011.py',
  't3c_011001.py',
  'update_t1a.py',
  't3b_111111.py',
  't3b_001011.py',
  't3c_011011.py',
  't3a_100001.py',
  't3a_100011.py',
  't3c_010111.py',
  't3c_010011.py',
  't3d_110111.py',
  't3b_111011.py',
  '__init__.py',
  't3d_100111.py',
  't3b_100001.py',
  't3c_110101.py',
  't3d_111001.py',
  't3c_011100.py',
  't3b_101110.py',
  't3c_011101.py',
  't3b_110001.py',
  't3b_111110.py',
  't3c_111011.py',
  't3b_101011.py',
  't3a_110111.py',
  't3b_100110.py',
  't3b_110011.py',
  't3c_110111.py',
  't3d_111011.py',
  't3c_100001.py',
  't3b_110010.py',
  't3c_100111.py',
  't3c_111100.py',
  't3b_001111.py',
  'update_t1b.py',
  'update_t2a.py',
  't3c_111101.py',
  't3a_111011.py',
  't3c_010100.py',
  't3b_100010.py',
  't3d_100001.py',
  't3c_010001.py',
  't3b_111001.py',
  't3c_110100.py',
  'update_t2c.py',
  't3b_101111.py',
  't3c_011111.py',
  't3b_101001.py',
  't3b_110110.py',
  't3a_111001.py',
  't3d_110001.py',
  't3b_001010.py',
  't3b_110111.py',
  't3b_001110.py',
  't3c_010101.py',
  't3b_100111.py',
  't3b_101010.py',
  't3a_110001.py',
  't3c_111001.py',
  't3a_111111.py',
  't3c_110001.py',
  't3b_111010.py',
  't3c_100100.py',
  'intermediates.py',
  't3b_001001.py',
  't3c_100011.py',
  't3c_110011.py',
  't3a_100111.py',
  't3c_100101.py',
  't3b_100011.py',
  't3c_111111.py',
  'update_t2b.py',
  't3d_111111.py'
]

py3.install_sources(
    python_sources,
    subdir: 'ccpy/cc/ccsdt1_updates'
)


