python_sources = [
  'r3c_100111.py',
  'r3b_100011.py',
  'r3b_110010.py',
  'r3d_111011.py',
  'r1a_update.py',
  'r3c_111001.py',
  'r3b_001111.py',
  'r3c_010001.py',
  'r3c_110011.py',
  'r3a_110011.py',
  'r3b_100111.py',
  'r3a_110001.py',
  'r3b_001011.py',
  'r3c_110101.py',
  'r3c_100101.py',
  'r3b_110111.py',
  '__init__.py',
  'r3c_110111.py',
  'r3b_110011.py',
  'r3b_101001.py',
  'r3b_001001.py',
  'r3c_110100.py',
  'r3c_100011.py',
  'r3d_100111.py',
  'r3d_110111.py',
  'r1b_update.py',
  'r2a_update.py',
  'r3c_011101.py',
  'r3b_100110.py',
  'r3a_100011.py',
  'r3d_110011.py',
  'r3b_111010.py',
  'r3a_100001.py',
  'r3b_101110.py',
  'r3c_010100.py',
  'r3d_111001.py',
  'r3a_100111.py',
  'r3c_010101.py',
  'r3c_010111.py',
  'r3b_111001.py',
  'r3b_101111.py',
  'r3b_001010.py',
  'r3b_101011.py',
  'r3a_110111.py',
  'r3a_111011.py',
  'r3c_111101.py',
  'r3d_100001.py',
  'r3c_011011.py',
  'r3b_111110.py',
  'r3c_111111.py',
  'r3b_100001.py',
  'r3c_111100.py',
  'r3b_100010.py',
  'r3b_111011.py',
  'r3c_011100.py',
  'r3b_110001.py',
  'r3b_111111.py',
  'r3c_011001.py',
  'r3d_110001.py',
  'r3c_110001.py',
  'r3c_010011.py',
  'r3b_001110.py',
  'r3d_100011.py',
  'r3c_100001.py',
  'r3a_111001.py',
  'intermediates.py',
  'r3b_110110.py',
  'r3a_111111.py',
  'r2c_update.py',
  'r3c_111011.py',
  'r3b_101010.py',
  'r3c_100100.py',
  'r2b_update.py',
  'r3c_011111.py',
  'r3d_111111.py'
]

py3.install_sources(
    python_sources,
    subdir: 'ccpy/eomcc/eomccsdt1_updates'
)


